@@ -1,3 +1,9 @@
+2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* configure:
+	* AssemblyInfo.cs:
+	* MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.
+
 2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* configure:
